# ppio-agent-sandbox-samples

./: .gitignore  README.md  README_zh.md
02-integrations/agentic-frameworks/langgraph/: .env.example  .gitignore  LICENSE  README.md  README_zh.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
02-integrations/agentic-frameworks/langgraph/tests/: test_local_multi_turn.sh  test_local_streaming.sh  (+3 more)
agent-runtime/: README.md  README_zh.md
integrations/agentic-frameworks/: README.md
integrations/agentic-frameworks/autogen/: .env.example  README.md
integrations/agentic-frameworks/crewai/: .env.example  README.md  app.py  pyproject.toml  requirements.txt
integrations/agentic-frameworks/crewai/tests/: test_local_multi_turn.sh  test_local_streaming.sh  test_sandbox_basic.py  test_sandbox_multi_turn.py
integrations/agentic-frameworks/google-adk/: .env.example  README.md  pyproject.toml
integrations/agentic-frameworks/langgraph/: .env.example  README.md  README_zh.md  app.py
integrations/agentic-frameworks/openai-agents-sdk/: .env.example  README.md  README_zh.md  requirements.txt
integrations/agentic-frameworks/strands/: .env.example  README.md  app.py  pyproject.toml  requirements.txt
sandbox-templates/browser-use/: .env.example  README.md  README_zh.md  build.sh  ppio.Dockerfile  ppio.toml  reverse-proxy.go
sandbox-templates/desktop-lite-exp/: ppio.Dockerfile  ppio.toml
sandbox-templates/desktop-v2-beta/: firefox-policies.json  firefox.cfg  ppio.Dockerfile  ppio.toml
tutorials/01-agent-runtime/: README.md
(+29 files in other folders)
